newclay/test/Compiler/Resolver/Fail/MissingName2/main.clay
import __primitives__.*;

define Bar as (Foo);
